# nepse-analyst

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  components.py  example_questions.py  main.py
data/raw/: nepse_companies_kaggle.csv
evaluation/: benchmark_questions.json
nepse_analyst/: __init__.py  build_db.py  chat_helpers.py  config.py  database.py  embeddings.py  example_questions.py  guardrails.py  language_detector.py  llm.py  pipeline.py  prompts.py  refresh_news.py  retriever.py  router.py  sql_generator.py
notebooks/: 01_ingest_companies.ipynb  02_ingest_price_history.ipynb  03_ingest_fundamentals.ipynb  04_ingest_ipos.ipynb  05_ingest_news.ipynb  06_evaluation.ipynb  evaluation.ipynb  ingest_companies.ipynb  ingest_fundamentals.ipynb  ingest_ipos.ipynb  ingest_news.ipynb  ingest_price_history.ipynb
scripts/: build_db.py  evaluate_benchmark.py  refresh_news.py
tests/: test_app_api.py  test_guardrails.py  test_pipeline_contract.py  test_router_entities.py  test_sql_safety.py
web/: app.js  index.html  styles.css
