[project]
name = "nepse-analyst"
version = "1.0"
description = "A natural language research assistant for Nepal's retail investors"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=0.5.0",
    "langdetect>=1.0.9",
    "lxml>=6.0.2",
    "nepse-api>=1.1.12",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
